--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,5 +8,8 @@
     "manifest_version": 2,
     "name": "Basalt eBook Reader",
     "short_name": "Basalt",
-    "version": "0.3.3"
+    "version": "0.4.0",
+    "web_accessible_resources": [
+        "reader/*"
+    ]
 }
